api get list user, reset password, block user